create template p2
